<resources>
    <string name="app_name">Oleo</string>

    // String resource
    <string name="click_again">Please click again to exit</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_not_have_account">Don\'t have an account? Sign up.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="image_description">Image Description</string>
    <string name="validPhoneNumber">Phone number is invalid</string>
    <string name="validPassword">Password is invalid</string>
    <string name="facebook_app_id">344652059597521</string>
    <string name="title_messages">Messages</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_groups">Groups</string>
    <string name="title_more">More</string>
    <string name="title_signUp">SignUp</string>
    <string name="title_cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_success">Sign Up Successful</string>
    <string name="sign_up_fail">Sign Up Failure</string>
    <string name="email">Email</string>
    <string name="validEmail">Email is invalid</string>
    <string name="validUserName">UserName is invalid</string>
    <string name="validConfirmPassword">ConfirmPassword is invalid</string>
    <string name="hintSearch">Search…</string>
    <string name="log_out">Log out</string>
    <string name="watch_list">Watch list</string>
    <string name="app_information">Application information</string>
    <string name="security">Security</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="validate_log_out">Do you want to log out?</string>
    <string name="login_failed">Login failed</string>
    <string name="phone_number_invalid">Phone number is not correct! Please check again</string>
    <string name="password_invalid">Password is not correct! Please check again</string>
    <string name="type_message">Type Message…</string>
    <string name="message_result_sign_up_success">You have successfully registered with the login account name : %s</string>
    <string name="message_please_wait">Please wait....</string>
    <string name="newMessage">add New Message</string>
    <string name="error_phone_number_exists">The phone number is exists</string>
    <string name="see_personal_info">See personal information</string>
    <string name="list_location">List Location</string>
    <string name="rename">Rename</string>
    <string name="unfollow">Unfollow</string>
    <string name="best_friend">Best friend</string>
    <string name="location_list">Location list</string>
    <string name="unfriend">UnFriend</string>
    <string name="block">Block</string>
    <string name="remove_box">Remove box</string>
    <string name="see_personal_information">See personal information</string>
    <string name="option">Option</string>
    <string name="add_friend"> Add friend</string>
    <string name="follow">Follow</string>
    <string name="message_unfollow_success">UnFollow success</string>
    <string name="message_unfollow_fail">UnFollow failed. Please try again !</string>
    <string name="message_follow_success">You have subscribed to follow this user. Please wait for feedback from that user !</string>
    <string name="message_follow_fail">Follow failed. Please try again !</string>
</resources>
