<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.oleo.screen.login.LoginViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/guidelineLogo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"
            />
        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_40"
            android:backgroundTint="@color/colorEditText"
            android:fontFamily="serif"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:textColorHint="@color/colorEditText"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_28"
            android:layout_marginEnd="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:backgroundTint="@color/colorEditText"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorEditText"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_32"
            android:background="@color/colorButtonLogin"
            android:fontFamily="serif"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorDefault"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:fontFamily="serif"
            android:text="@string/forgot_password"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/guidelineLoginForm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"
            />
        <View
            android:id="@+id/viewLine"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@color/colorGrey400"
            app:layout_constraintEnd_toEndOf="@id/editTextPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@id/guidelineLoginForm"
            tools:ignore="MissingConstraints"
            />
        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="@dimen/dp_35"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/or"
            android:background="@color/colorDefault"
            android:textAlignment="center"
            android:textColor="@color/colorGrey500"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@+id/viewLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewLine"
            />
        <TextView
            android:id="@+id/textViewLoginFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/facebook_bg"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/ic_facebook"
            android:fontFamily="serif"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_24"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/facebook"
            android:textColor="@color/colorDefault"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@+id/textViewLoginGG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLine"
            />
        <TextView
            android:id="@+id/textViewLoginGG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/google_bg"
            android:drawablePadding="@dimen/dp_8"
            android:drawableStart="@drawable/ic_google_plus"
            android:fontFamily="serif"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_26"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/google"
            android:textColor="@color/colorDefault"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewLoginFB"
            app:layout_constraintTop_toBottomOf="@id/viewLine"
            />
        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:fontFamily="serif"
            android:text="@string/do_not_have_account"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
