<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.framgia.oleo.screen.signup.SignUpViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_sign_up_bg"
            android:paddingBottom="@dimen/dp_44"
            android:paddingTop="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">
            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_12"
                android:fontFamily="serif"
                android:text="@string/sign_up"
                android:textColor="@color/colorButtonSignUp"
                android:textSize="@dimen/sp_26"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/editTextUserName"
                app:layout_constraintEnd_toStartOf="@id/buttonClose"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/editTextUserName"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="@id/textViewSignUp"
                app:layout_constraintEnd_toEndOf="@id/editTextUserName"
                app:layout_constraintStart_toEndOf="@id/textViewSignUp"
                app:layout_constraintTop_toTopOf="@id/textViewSignUp"/>
            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_user"
                android:fontFamily="serif"
                android:hint="@string/user_name"
                android:textColorHint="@color/colorGrey800Light"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toTopOf="@id/editTextPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSignUp"
                app:layout_constraintWidth_percent="0.9"/>
            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_phone"
                android:fontFamily="serif"
                android:inputType="number"
                android:hint="@string/phone_number"
                android:textColorHint="@color/colorGrey800Light"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toTopOf="@id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextUserName"
                app:layout_constraintWidth_percent="0.9"/>
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="serif"
                android:hint="@string/password"
                android:textColorHint="@color/colorGrey800Light"
                android:textSize="@dimen/sp_14"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/editTextConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
                app:layout_constraintWidth_percent="0.9"/>
            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorEditText"
                android:drawablePadding="@dimen/dp_24"
                android:drawableStart="@drawable/ic_password"
                android:fontFamily="serif"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorGrey800Light"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                app:layout_constraintWidth_percent="0.9"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_sign_up_bg"
            android:paddingBottom="@dimen/dp_12"
            android:paddingTop="@dimen/dp_12"
            android:src="@drawable/ic_tick"
            app:layout_constraintBottom_toBottomOf="@id/layoutEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEditText"
            app:layout_constraintWidth_percent="0.3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
